[package]
name = "auction-factory"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "auction_factory"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
arrayref = "0.3.6"
borsh = "0.9.1"
metaplex-token-metadata = {  version = "0.0.1", features = ["no-entrypoint"] }
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.7.11"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
spl-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.7.11"
solana-sdk = "1.7.11"
